include/libqgraphicsitem.h

typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsSceneContextMenuEvent QGraphicsSceneContextMenuEvent;
typedef struct QGraphicsSceneDragDropEvent QGraphicsSceneDragDropEvent;
typedef struct QGraphicsSceneHoverEvent QGraphicsSceneHoverEvent;
typedef struct QGraphicsSceneMouseEvent QGraphicsSceneMouseEvent;
typedef struct QGraphicsSceneWheelEvent QGraphicsSceneWheelEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QRectF* QGraphicsItem_ChildrenBoundingRect(const QGraphicsItem* self);
QRectF* QGraphicsItem_SceneBoundingRect(const QGraphicsItem* self);
QPainterPath* QGraphicsItem_Shape(const QGraphicsItem* self);
bool QGraphicsItem_IsClipped(const QGraphicsItem* self);
QPainterPath* QGraphicsItem_ClipPath(const QGraphicsItem* self);
bool QGraphicsItem_Contains(const QGraphicsItem* self, QPointF* point);
bool QGraphicsItem_CollidesWithItem(const QGraphicsItem* self, QGraphicsItem* other, int mode);
bool QGraphicsItem_CollidesWithPath(const QGraphicsItem* self, QPainterPath* path, int mode);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems(const QGraphicsItem* self);
bool QGraphicsItem_IsObscured(const QGraphicsItem* self);
bool QGraphicsItem_IsObscured2(const QGraphicsItem* self, double x, double y, double w, double h);
bool QGraphicsItem_IsObscuredBy(const QGraphicsItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsItem_OpaqueArea(const QGraphicsItem* self);
QRegion* QGraphicsItem_BoundingRegion(const QGraphicsItem* self, QTransform* itemToDeviceTransform);
double QGraphicsItem_BoundingRegionGranularity(const QGraphicsItem* self);
void QGraphicsItem_SetBoundingRegionGranularity(QGraphicsItem* self, double granularity);
void QGraphicsItem_Paint(QGraphicsItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
void QGraphicsItem_Update(QGraphicsItem* self);
void QGraphicsItem_Update2(QGraphicsItem* self, double x, double y, double width, double height);
void QGraphicsItem_Scroll(QGraphicsItem* self, double dx, double dy);
QPointF* QGraphicsItem_MapToItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapToParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapToScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectToItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectToParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectToScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapToItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapFromItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapFromParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapFromScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectFromItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapFromItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapToItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapToParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapToScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectToItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToScene2(const QGraphicsItem* self, double x, double y, double w, double h);
QPointF* QGraphicsItem_MapFromItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapFromParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapFromScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectFromItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromScene2(const QGraphicsItem* self, double x, double y, double w, double h);
bool QGraphicsItem_IsAncestorOf(const QGraphicsItem* self, QGraphicsItem* child);
QGraphicsItem* QGraphicsItem_CommonAncestorItem(const QGraphicsItem* self, QGraphicsItem* other);
bool QGraphicsItem_IsUnderMouse(const QGraphicsItem* self);
QVariant* QGraphicsItem_Data(const QGraphicsItem* self, int key);
void QGraphicsItem_SetData(QGraphicsItem* self, int key, QVariant* value);
int QGraphicsItem_InputMethodHints(const QGraphicsItem* self);
void QGraphicsItem_SetInputMethodHints(QGraphicsItem* self, int hints);
int QGraphicsItem_Type(const QGraphicsItem* self);
void QGraphicsItem_InstallSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
void QGraphicsItem_RemoveSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
bool QGraphicsItem_SceneEventFilter(QGraphicsItem* self, QGraphicsItem* watched, QEvent* event);
bool QGraphicsItem_SceneEvent(QGraphicsItem* self, QEvent* event);
void QGraphicsItem_ContextMenuEvent(QGraphicsItem* self, QGraphicsSceneContextMenuEvent* event);
void QGraphicsItem_DragEnterEvent(QGraphicsItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsItem_DragLeaveEvent(QGraphicsItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsItem_DragMoveEvent(QGraphicsItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsItem_DropEvent(QGraphicsItem* self, QGraphicsSceneDragDropEvent* event);
void QGraphicsItem_FocusInEvent(QGraphicsItem* self, QFocusEvent* event);
void QGraphicsItem_FocusOutEvent(QGraphicsItem* self, QFocusEvent* event);
void QGraphicsItem_HoverEnterEvent(QGraphicsItem* self, QGraphicsSceneHoverEvent* event);
void QGraphicsItem_HoverMoveEvent(QGraphicsItem* self, QGraphicsSceneHoverEvent* event);
void QGraphicsItem_HoverLeaveEvent(QGraphicsItem* self, QGraphicsSceneHoverEvent* event);
void QGraphicsItem_KeyPressEvent(QGraphicsItem* self, QKeyEvent* event);
void QGraphicsItem_KeyReleaseEvent(QGraphicsItem* self, QKeyEvent* event);
void QGraphicsItem_MousePressEvent(QGraphicsItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsItem_MouseMoveEvent(QGraphicsItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsItem_MouseReleaseEvent(QGraphicsItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsItem_MouseDoubleClickEvent(QGraphicsItem* self, QGraphicsSceneMouseEvent* event);
void QGraphicsItem_WheelEvent(QGraphicsItem* self, QGraphicsSceneWheelEvent* event);
void QGraphicsItem_InputMethodEvent(QGraphicsItem* self, QInputMethodEvent* event);
QVariant* QGraphicsItem_InputMethodQuery(const QGraphicsItem* self, int query);
QVariant* QGraphicsItem_ItemChange(QGraphicsItem* self, int change, QVariant* value);
bool QGraphicsItem_SupportsExtension(const QGraphicsItem* self, int extension);
void QGraphicsItem_SetExtension(QGraphicsItem* self, int extension, QVariant* variant);
QVariant* QGraphicsItem_Extension(const QGraphicsItem* self, QVariant* variant);
void QGraphicsItem_SetFlag2(QGraphicsItem* self, int flag, bool enabled);
void QGraphicsItem_SetCacheMode2(QGraphicsItem* self, int mode, QSize* cacheSize);
void QGraphicsItem_UpdateMicroFocus(QGraphicsItem* self);
void QGraphicsItem_AddToIndex(QGraphicsItem* self);
void QGraphicsItem_RemoveFromIndex(QGraphicsItem* self);
void QGraphicsItem_PrepareGeometryChange(QGraphicsItem* self);