src/qt/libqgraphicsitem.bf

	[LinkName("QGraphicsItem_ChildrenBoundingRect")]
	public static extern void QGraphicsItem_ChildrenBoundingRect(void* c_this);
	[LinkName("QGraphicsItem_SceneBoundingRect")]
	public static extern void QGraphicsItem_SceneBoundingRect(void* c_this);
	[LinkName("QGraphicsItem_Shape")]
	public static extern void QGraphicsItem_Shape(void* c_this);
	[LinkName("QGraphicsItem_IsClipped")]
	public static extern bool QGraphicsItem_IsClipped(void* c_this);
	[LinkName("QGraphicsItem_ClipPath")]
	public static extern void QGraphicsItem_ClipPath(void* c_this);
	[LinkName("QGraphicsItem_Contains")]
	public static extern bool QGraphicsItem_Contains(void* c_this, void* point);
	[LinkName("QGraphicsItem_CollidesWithItem")]
	public static extern bool QGraphicsItem_CollidesWithItem(void* c_this, void* other, int64 mode);
	[LinkName("QGraphicsItem_CollidesWithPath")]
	public static extern bool QGraphicsItem_CollidesWithPath(void* c_this, void* path, int64 mode);
	[LinkName("QGraphicsItem_CollidingItems")]
	public static extern void*[] QGraphicsItem_CollidingItems(void* c_this);
	[LinkName("QGraphicsItem_IsObscured")]
	public static extern bool QGraphicsItem_IsObscured(void* c_this);
	[LinkName("QGraphicsItem_IsObscured2")]
	public static extern bool QGraphicsItem_IsObscured2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_IsObscuredBy")]
	public static extern bool QGraphicsItem_IsObscuredBy(void* c_this, void* item);
	[LinkName("QGraphicsItem_OpaqueArea")]
	public static extern void QGraphicsItem_OpaqueArea(void* c_this);
	[LinkName("QGraphicsItem_BoundingRegion")]
	public static extern void QGraphicsItem_BoundingRegion(void* c_this, void* itemToDeviceTransform);
	[LinkName("QGraphicsItem_BoundingRegionGranularity")]
	public static extern double QGraphicsItem_BoundingRegionGranularity(void* c_this);
	[LinkName("QGraphicsItem_SetBoundingRegionGranularity")]
	public static extern void QGraphicsItem_SetBoundingRegionGranularity(void* c_this, double granularity);
	[LinkName("QGraphicsItem_Paint")]
	public static extern void QGraphicsItem_Paint(void* c_this, void* painter, void* option, void* widget);
	[LinkName("QGraphicsItem_Update")]
	public static extern void QGraphicsItem_Update(void* c_this);
	[LinkName("QGraphicsItem_Update2")]
	public static extern void QGraphicsItem_Update2(void* c_this, double x, double y, double width, double height);
	[LinkName("QGraphicsItem_Scroll")]
	public static extern void QGraphicsItem_Scroll(void* c_this, double dx, double dy);
	[LinkName("QGraphicsItem_MapToItem")]
	public static extern void QGraphicsItem_MapToItem(void* c_this, void* item, void* point);
	[LinkName("QGraphicsItem_MapToParent")]
	public static extern void QGraphicsItem_MapToParent(void* c_this, void* point);
	[LinkName("QGraphicsItem_MapToScene")]
	public static extern void QGraphicsItem_MapToScene(void* c_this, void* point);
	[LinkName("QGraphicsItem_MapRectToItem")]
	public static extern void QGraphicsItem_MapRectToItem(void* c_this, void* item, void* rect);
	[LinkName("QGraphicsItem_MapRectToParent")]
	public static extern void QGraphicsItem_MapRectToParent(void* c_this, void* rect);
	[LinkName("QGraphicsItem_MapRectToScene")]
	public static extern void QGraphicsItem_MapRectToScene(void* c_this, void* rect);
	[LinkName("QGraphicsItem_MapToItem4")]
	public static extern void QGraphicsItem_MapToItem4(void* c_this, void* item, void* path);
	[LinkName("QGraphicsItem_MapToParentWithPath")]
	public static extern void QGraphicsItem_MapToParentWithPath(void* c_this, void* path);
	[LinkName("QGraphicsItem_MapToSceneWithPath")]
	public static extern void QGraphicsItem_MapToSceneWithPath(void* c_this, void* path);
	[LinkName("QGraphicsItem_MapFromItem")]
	public static extern void QGraphicsItem_MapFromItem(void* c_this, void* item, void* point);
	[LinkName("QGraphicsItem_MapFromParent")]
	public static extern void QGraphicsItem_MapFromParent(void* c_this, void* point);
	[LinkName("QGraphicsItem_MapFromScene")]
	public static extern void QGraphicsItem_MapFromScene(void* c_this, void* point);
	[LinkName("QGraphicsItem_MapRectFromItem")]
	public static extern void QGraphicsItem_MapRectFromItem(void* c_this, void* item, void* rect);
	[LinkName("QGraphicsItem_MapRectFromParent")]
	public static extern void QGraphicsItem_MapRectFromParent(void* c_this, void* rect);
	[LinkName("QGraphicsItem_MapRectFromScene")]
	public static extern void QGraphicsItem_MapRectFromScene(void* c_this, void* rect);
	[LinkName("QGraphicsItem_MapFromItem4")]
	public static extern void QGraphicsItem_MapFromItem4(void* c_this, void* item, void* path);
	[LinkName("QGraphicsItem_MapFromParentWithPath")]
	public static extern void QGraphicsItem_MapFromParentWithPath(void* c_this, void* path);
	[LinkName("QGraphicsItem_MapFromSceneWithPath")]
	public static extern void QGraphicsItem_MapFromSceneWithPath(void* c_this, void* path);
	[LinkName("QGraphicsItem_MapToItem5")]
	public static extern void QGraphicsItem_MapToItem5(void* c_this, void* item, double x, double y);
	[LinkName("QGraphicsItem_MapToParent2")]
	public static extern void QGraphicsItem_MapToParent2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapToScene2")]
	public static extern void QGraphicsItem_MapToScene2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapRectToItem2")]
	public static extern void QGraphicsItem_MapRectToItem2(void* c_this, void* item, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectToParent2")]
	public static extern void QGraphicsItem_MapRectToParent2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectToScene2")]
	public static extern void QGraphicsItem_MapRectToScene2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapFromItem5")]
	public static extern void QGraphicsItem_MapFromItem5(void* c_this, void* item, double x, double y);
	[LinkName("QGraphicsItem_MapFromParent2")]
	public static extern void QGraphicsItem_MapFromParent2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapFromScene2")]
	public static extern void QGraphicsItem_MapFromScene2(void* c_this, double x, double y);
	[LinkName("QGraphicsItem_MapRectFromItem2")]
	public static extern void QGraphicsItem_MapRectFromItem2(void* c_this, void* item, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectFromParent2")]
	public static extern void QGraphicsItem_MapRectFromParent2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_MapRectFromScene2")]
	public static extern void QGraphicsItem_MapRectFromScene2(void* c_this, double x, double y, double w, double h);
	[LinkName("QGraphicsItem_IsAncestorOf")]
	public static extern bool QGraphicsItem_IsAncestorOf(void* c_this, void* child);
	[LinkName("QGraphicsItem_CommonAncestorItem")]
	public static extern void* QGraphicsItem_CommonAncestorItem(void* c_this, void* other);
	[LinkName("QGraphicsItem_IsUnderMouse")]
	public static extern bool QGraphicsItem_IsUnderMouse(void* c_this);
	[LinkName("QGraphicsItem_Data")]
	public static extern void QGraphicsItem_Data(void* c_this, int32 key);
	[LinkName("QGraphicsItem_SetData")]
	public static extern void QGraphicsItem_SetData(void* c_this, int32 key, void* value);
	[LinkName("QGraphicsItem_InputMethodHints")]
	public static extern int64 QGraphicsItem_InputMethodHints(void* c_this);
	[LinkName("QGraphicsItem_SetInputMethodHints")]
	public static extern void QGraphicsItem_SetInputMethodHints(void* c_this, int64 hints);
	[LinkName("QGraphicsItem_Type")]
	public static extern int32 QGraphicsItem_Type(void* c_this);
	[LinkName("QGraphicsItem_InstallSceneEventFilter")]
	public static extern void QGraphicsItem_InstallSceneEventFilter(void* c_this, void* filterItem);
	[LinkName("QGraphicsItem_RemoveSceneEventFilter")]
	public static extern void QGraphicsItem_RemoveSceneEventFilter(void* c_this, void* filterItem);
	[LinkName("QGraphicsItem_UpdateMicroFocus")]
	public static extern void QGraphicsItem_UpdateMicroFocus(void* c_this);
	[LinkName("QGraphicsItem_SceneEventFilter")]
	public static extern bool QGraphicsItem_SceneEventFilter(void* c_this, void* watched, void* event);
	[LinkName("QGraphicsItem_SceneEvent")]
	public static extern bool QGraphicsItem_SceneEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_ContextMenuEvent")]
	public static extern void QGraphicsItem_ContextMenuEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_DragEnterEvent")]
	public static extern void QGraphicsItem_DragEnterEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_DragLeaveEvent")]
	public static extern void QGraphicsItem_DragLeaveEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_DragMoveEvent")]
	public static extern void QGraphicsItem_DragMoveEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_DropEvent")]
	public static extern void QGraphicsItem_DropEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_FocusInEvent")]
	public static extern void QGraphicsItem_FocusInEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_FocusOutEvent")]
	public static extern void QGraphicsItem_FocusOutEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_HoverEnterEvent")]
	public static extern void QGraphicsItem_HoverEnterEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_HoverMoveEvent")]
	public static extern void QGraphicsItem_HoverMoveEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_HoverLeaveEvent")]
	public static extern void QGraphicsItem_HoverLeaveEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_KeyPressEvent")]
	public static extern void QGraphicsItem_KeyPressEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_KeyReleaseEvent")]
	public static extern void QGraphicsItem_KeyReleaseEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_MousePressEvent")]
	public static extern void QGraphicsItem_MousePressEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_MouseMoveEvent")]
	public static extern void QGraphicsItem_MouseMoveEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_MouseReleaseEvent")]
	public static extern void QGraphicsItem_MouseReleaseEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_MouseDoubleClickEvent")]
	public static extern void QGraphicsItem_MouseDoubleClickEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_WheelEvent")]
	public static extern void QGraphicsItem_WheelEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_InputMethodEvent")]
	public static extern void QGraphicsItem_InputMethodEvent(void* c_this, void* event);
	[LinkName("QGraphicsItem_InputMethodQuery")]
	public static extern void QGraphicsItem_InputMethodQuery(void* c_this, int64 query);
	[LinkName("QGraphicsItem_ItemChange")]
	public static extern void QGraphicsItem_ItemChange(void* c_this, int64 change, void* value);
	[LinkName("QGraphicsItem_SupportsExtension")]
	public static extern bool QGraphicsItem_SupportsExtension(void* c_this, int64 _extension);
	[LinkName("QGraphicsItem_SetExtension")]
	public static extern void QGraphicsItem_SetExtension(void* c_this, int64 _extension, void* variant);
	[LinkName("QGraphicsItem_Extension")]
	public static extern void QGraphicsItem_Extension(void* c_this, void* variant);
	[LinkName("QGraphicsItem_AddToIndex")]
	public static extern void QGraphicsItem_AddToIndex(void* c_this);
	[LinkName("QGraphicsItem_RemoveFromIndex")]
	public static extern void QGraphicsItem_RemoveFromIndex(void* c_this);
	[LinkName("QGraphicsItem_PrepareGeometryChange")]
	public static extern void QGraphicsItem_PrepareGeometryChange(void* c_this);
	[LinkName("QGraphicsItem_SetFlag2")]
	public static extern void QGraphicsItem_SetFlag2(void* c_this, int64 flag, bool enabled);
	[LinkName("QGraphicsItem_SetCacheMode2")]
	public static extern void QGraphicsItem_SetCacheMode2(void* c_this, int64 mode, void* cacheSize);
